# circular-buffer

./: CMakeLists.txt  README.md
include/: circular_buffer.h
tests/: CMakeLists.txt  test_cbuff.cpp  test_cbuffext.cpp
